# ChangeLog for app-admin/syslog-ng
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.435 2015/08/06 15:36:41 klausman Exp $

  06 Aug 2015; Tobias Klausmann <klausman@gentoo.org> syslog-ng-3.6.4.ebuild:
  Stable on alpha, bug 556546

  06 Aug 2015; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.6.4.ebuild:
  install the man pages (bug #556776)

  04 Aug 2015; Mikle Kolyada <zlogene@gentoo.org> syslog-ng-3.6.4.ebuild:
  x86 stable wrt bug #556546

  03 Aug 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.4.ebuild:
  Stable for amd64, wrt bug #556546

  13 Jul 2015; Michael Sterrett <mr_bones_@gentoo.org> -syslog-ng-3.6.3.ebuild:
  old

*syslog-ng-3.6.4 (03 Jul 2015)

  03 Jul 2015; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.6.4.ebuild:
  version bump

*syslog-ng-3.6.3 (10 Jun 2015)

  10 Jun 2015; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.6.3.ebuild:
  version bump

  28 May 2015; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.6.2.ebuild:
  make epatch_user work with patch from John R. Graham (bug #550656)

  25 Apr 2015; <jmorgan@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for sparc, wrt bug #543234

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for ia64, wrt bug #543234

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for alpha, wrt bug #543234

  03 Apr 2015; Markus Meier <maekke@gentoo.org> syslog-ng-3.6.2.ebuild:
  arm stable, bug #543234

  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for ppc64, wrt bug #543234

  30 Mar 2015;  <tgall@gentoo.org> syslog-ng-3.6.2.ebuild:
  stable on arm64

  29 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> files/3.6/syslog-ng.rc6:
  fix checkpath typo (bug #544748)

  28 Mar 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for ppc, wrt bug #543234
