@@ -22,15 +22,15 @@ DIST syslog-ng_3.6.2.tar.gz 3207456 SHA256 ef47fada52981e09af570457a5af30f815f5d
 DIST syslog-ng_3.6.4.tar.gz 3276432 SHA256 7be11df31ac7d716f1f952e22b5ae8e2049edd633a41b223776a853d9106f4e7 SHA512 9c648628b9bd3ebb25bc44fa6586e88a4b9ed7c24b1c337569d3cccb04bf2f427ba1218900f8dfd8f668f245d6ab44ad45b67da661b7c2af68c6c42101b722e1 WHIRLPOOL 496a9b2e06e33b0c42726f3b13f859f356f136367c48363cd22b086b72f4f54a32cc057235636f2d2ea3ad7bdd622354ea67df1cbc770be608a84bc861fce93d
 EBUILD syslog-ng-3.4.8.ebuild 3588 SHA256 2bf7cb39b5486e7a6b95834ad87ec19a0d00e93126fc57dd826b6bebc3e9e844 SHA512 32eadb10f65970756a30d852dcb14bf0296425e5c256182956d3cc42b8571c46df3a293da40a9ff730046252a3e078413e11543176c39586d5dbcea970e41939 WHIRLPOOL ebbb2b786c6061017d0a69878fb6811d7b97495f948e5c46d8dff695281b864e6f8a8d177f71c7a75652905f4f511c479e26868ccebb7838c211a8dda8ecfc9d
 EBUILD syslog-ng-3.6.2.ebuild 3789 SHA256 2e1451e271756b246f88d226244b94b8195e3aafb9fa9380046a0d1bb625766f SHA512 70b1539c438498fad41feeb2699060a182366ddf69f3d20bf14ed97c116876d332dfa695dff8e9ebd15057253c9efc9b6c6c2349ff03c480b3becc128ff9b468 WHIRLPOOL c451f6df91fe8f6fd9bb77e6a92c2f86323e97220ad1031fa0b1d9f6bab825d5cd8af3f6fb30e0f201db4c4ee73e25aa11f2628346c331303c675f5ab54f49ef
-EBUILD syslog-ng-3.6.4.ebuild 3765 SHA256 cce59b0a711c98e9c1caa3fc18edb81a4f6fb860c2108507c6c6a60150e6ef61 SHA512 5001e276d32fc2616927e1d619f2fcbdfc19436f1796e1fd8349d796083d84da9fd210cfd9bff4a13061ec16cc34364372d45a237e917cd5e85136b0d628f8a4 WHIRLPOOL 9dbfe0ab8cbca5e5ca22c4b553281da29970327c050b726e669b18949e3e62c65fdfac27e57c62e3055ff47cb47664847dc31e6fb62d11c903617a56d1f8922d
-MISC ChangeLog 60750 SHA256 1579c946fa35ab753d0abb4af40b529042beade89ac17f2fd13c68a97021bb09 SHA512 26d931408a2ee5cb1b1b16968f08f7a4df243d7211b810c00208306bac110b601957a9d780bd4d95ad6d9d5bbc00ec66bb69ba4673b4fb58877d48aac3c999da WHIRLPOOL 06e57cd7bc18b772d9aeb4f979342b8f4d8fa70bd38c6d94d6436a1a529e056e4ea397d5b5aa4bd3e795cf0ff4d211d9535c559c7b80ca23d8c9f71f5d6c9d03
+EBUILD syslog-ng-3.6.4.ebuild 3763 SHA256 8a74f2ac785008ff8e59d88d47b032476110386606b1308555d270918a7cf9ba SHA512 49113be874bf0e0a7d70259aeb9a25f07a55851804b9724a732e3242bd4221c62bf7d9fff807c78f8020265e193f98dab3ab69c9b44a9276b31ec608c1c352fb WHIRLPOOL 0a8257fc04ed418f53735e525bda6c7e60d0202637fd12337335ebee7e5702952b0b520de686fe85faadf925dc7414eb5c70b59000caea26b5bee91c97ac5c04
+MISC ChangeLog 60854 SHA256 965ab42d63ab0cc3f3341dac8f434227c668c81b1056fdaf4de22414e7532d01 SHA512 1073ec4b44236824e2f88ccfc917862a6af82fd22452b9e673206de924f535d7b9327866f0ad4f6926b8d2646bf46fa5951429412af6004adca66d5bfc0cf96a WHIRLPOOL e17895e9599297d158fb4407d97365c5a0fac01dd1a5c53711ba7743fa61245261623146b44dbdadb05c58cc96ae92bca955d836c0fb9d084aa45574cf5abff9
 MISC metadata.xml 792 SHA256 9116bcafb5bc0f8cb3e27e43b474bb387de0467f47fe81f2a2da462cd1438834 SHA512 d81f3f86da8fa594eca1b2224ffe4e07c467f63aee77273b91df7b91256d54653c70b1a3c6543f1a6ce51594f75fdb4245d4ad6766d687275efe7b1811b317a4 WHIRLPOOL efc50cd99fe30a65e83b180794e3d9f58e09f6680c14ea038e09746f414b83c5ba3380d0c6796cca254a4ab81ce676f9dbdefb577abc5a39a26281a8ef9010d2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iKYEAREIAGYFAlXDfwpfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
-RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOijFwCcDhH/9u4qm9adWY+vQmyTerl9
-as0AnRKAl/CXid7BRkLJ6Pgpb9scilOx
-=OtIP
+iJwEAQEIAAYFAlXDltQACgkQG9wOWsQutdbUcAQAl1URiEF7Hhq6WS93fk3vfSRv
+cPzoLmcUOO5OKPw+Aa4SJTNPPKamCa9vXCyrcbXKdSIPleqY3zSpWFUxr0dJFcRU
+AgHhbW40t5vNLNOGdC5k1k/0SyK2h+AGA54R1BJrr96WosB5iw+Z0nrU/9GRLtCf
+6ZlfKG6bxRlXeZooAzA=
+=KpnX
 -----END PGP SIGNATURE-----
