@@ -6,19 +6,23 @@ DIST bcmail-jdk15-145.tar.gz 483519 SHA256 e74e2a48135e9396ed3622d9dae64eb66e6e8
 DIST bcmail-jdk15on-150.tar.gz 221760 SHA256 1005a21cc5bf705801d217fb5eb90d97106bc11bf1f7079573a64b12f3e080c9 SHA512 91727ddc4bf932cfaedd3cb90a807b5fec3120e56fde3e5fc73bb5bf2e97db50a35a63e0b5e342fe29e4b974579c5cdd5d427d01c9dd8e7abd521ccd3d1959f1 WHIRLPOOL 96893e526007a9635f847010c0c37d17974b999cd71baba416cd287a31407e815ddbb6ae0069c46d362479dc369b726926a026d3267e34bfcc23aea9b523eb6f
 DIST bcmail-jdk15on-152.tar.gz 240800 SHA256 de826cc84f89b053317a4ba548a5739ed626a925d5c3d82b4192682b4abb99f4 SHA512 e7301991071709b5788e5a813ea765a5e59bb089104a031ca91a509036e7823b851f854e5f96de6a2d2ef817aad4435f78742dea3a9b1dbeb95a6cddf250619e WHIRLPOOL a332507341015a2ebee6ab7ca38af10d48d3eda339191831a126680200b9dc0de468971e5b96df2133f483cb7c044108bfe2f544fb9e09d896fd802d22aac8d3
 EBUILD bcmail-1.38-r3.ebuild 1303 SHA256 ed14d462d6a122b30916479c81a3e44da8692c24392cd99f726c7b49c2d8a5f8 SHA512 5aac2bd1e1bbe698f89950908f5c059ddb0b293a714fa77578fd3d42335274c56cc62f1763e20177a785d84715557b76cece9e525490064d08b3bf54b31798ff WHIRLPOOL 2cb83a524231e8f808592e2f85c2eb019d0c97059c15eaf4e37ac3191336339f809eeab83adc845c0494c6e40dcc821f33a8d0a0471620e1faa2727d331225b2
+EBUILD bcmail-1.38-r4.ebuild 1095 SHA256 18dd136c5471ac26abf8ce3bc8ceddc800a9b963e091f0ae41b999947c08550f SHA512 c1baa0fb886712365d01a1d31f8e7f2810b9934a6e3f48ed1236353b9c6630113a9672ddd2bb4154e2252b6277784b571f8559f86c3b6d4c2e2a7b65445b8bd9 WHIRLPOOL 3d3c0d5af5ffda62ef2edaa195ba159ac1791e4e877bf595be17dccfd20872f7177abce84c95953b40610a40043626c9f9963184d3c5b01147a5ccb355455479
 EBUILD bcmail-1.45-r2.ebuild 1273 SHA256 b86cdb59f09aee4a0ecc3b63beed8057fa5350816b35838db9e39b03d92fda4a SHA512 721a8ac5ac7d5fe725f2050c1a6326453a8b03d1ec42b9eb00303aca725ea9d106dc54b92f402137b9f809b6a1246c636e16299e82a8fcb0d0c913b4bce80ce3 WHIRLPOOL c61458b223469f54aa3bba4251264e48993ed687df9fc6486d49ead6cc3ecbc076f2ab7746520a5b978dd8c9baf7d76d710b875d85323e5b33f1aa067f7dd13b
+EBUILD bcmail-1.45-r3.ebuild 1105 SHA256 41b1d81ecff86af614299211e9932e690af6e5507d0c95b2855475d4132ef0d4 SHA512 e71ad1643867c6b9aea978c6d7cf34c3d8a8030e68d91d24c26892462b82c441a79608262830292f36d8f673696283e728b656f8ad8e9d159a336e8bc08e45ae WHIRLPOOL 97fc0e4f335071ce534150a86dd5f2db31b8d789b74995881eb7052a046521c5e3a246849aeac4055b7effa7a19ad9c877e524d575d8e380062ef3c701cf2d34
+EBUILD bcmail-1.50-r1.ebuild 1347 SHA256 a9fe5bc732c3df09653d41a4969d1b5aeef6da5e9181792bde112971d3221808 SHA512 4a4b890256f0be3a736a18c98fc4b3f59ce93a94fa0bc2f89a1760f3412b6ab4f0228414a8f2f054295dd247ba7f09105ec8c1e332e403624c10377fe7265d87 WHIRLPOOL 3682a41a370c3cedec9be45e1e7d85b062694ec6fa2accf8efc7dab9b7da3dd85a8f8600b2be2c4b0cf3dcbd3ce1b8c440810fea67bc9c11bde3a27192065daf
 EBUILD bcmail-1.50.ebuild 1847 SHA256 dc0ac5f9ec4697512657039dfc80dd06faef1d89a03740a6a3599539785747b0 SHA512 bada32595a8cd8526e58d5b7a028bfa4d47e58422016dc81db4012ecf6f6275023f4ee6f2f7b05eaf54bfe2049968679b122e79c422f9a7fb7a56172a1709cfe WHIRLPOOL d8774409620a483c1510bff8c8eb1445d56c5a947b6dc21cbdfcec1991a97be930ab73ae39b576939935442e151e65849b663d0c5db4ea0d1861730fc55a568f
+EBUILD bcmail-1.52-r1.ebuild 1347 SHA256 89c28637b3449348e1848e07e9567e36e8a0285432fd1152d1ebb55b9ea2a666 SHA512 8a3bae285cfbc2207d91468f014cf899ff7883d8aef7f367b2f7c0f99bde6185220f72fcc3ecb5c8dc6244671543fd82a8db877160355060494e414afe0b95cc WHIRLPOOL 26a7f04abe6187ab4410a0ab4e172498c71a43ca4b2dbcdb2f2a9c92df12849238cfc2dc494d577b181e912260afa1bb268340e133d570f96527741613afc899
 EBUILD bcmail-1.52.ebuild 1835 SHA256 9b1d4d770aed4dbe98a36e92788ac3f3222064ec7cfddd0dd56dd60be0ab6c56 SHA512 245d46273537b16716efd0e6511ef99abf47c69df297b199437dd91baff496be1ae64966d7be7db9286fdb69a06f941e2696c16e7860097519e850301e7e29ca WHIRLPOOL 33d6884080444b423fbcb5e920b2ad3ee80b08bf743240403b8629897907d175dc92b3769071aa0a17d3295a3ae97e00b9433cd5a7487cdc5dae1cfb943c7e6d
-MISC ChangeLog 6375 SHA256 b68fe62f61b8699c5119feed5fa64f322967f4ed71042907c45d784318893076 SHA512 41d422ea1c36f4e4eb30a94d356e8816251205d6ef6a5be149aa1a29f2cf6e148b1864cc27cf3956653130b74bd309875137c6353bf5f3f69b6f48715a50e1cf WHIRLPOOL 51a903c4ac2b21246b8d5b63c74574e2bebc4b101beef1091cebf9d6cc010978a8109a7d53129de0eadd62b55cbbbf3dc3f17dbc1bad061d75ee2479bbe424ed
+MISC ChangeLog 6838 SHA256 26457e7a3841f6af1491b57638aca6eac3c11651f28981749ffaf648ea8fcb9a SHA512 a8ae2bf99ee1bc045e7f26e3cacde53a40b6a4d74e722c213a05ce40cd0726c3319cdcd0b201de607f77458e96ee337b3c62ca1753293a5ff997269f56c81a4d WHIRLPOOL 96df9bc6717900e57963a77eb600c4a2ac818afdc31879cf0327a39c933057d1a676fa73f7d57533d12aa3650e7ae506a9675de1ce046a2b66ccaa606c491c1d
 MISC metadata.xml 291 SHA256 8c4fcd1bc741de757078e811eae3b33f67ea2b30780bb6fd29303216820b58cb SHA512 bba7360c64a44c9a6a48e4604b9af368b28dbce44981599c14e6cb92999fa2556b1d99006091a3556f6563666e884ee28717fbfdf77b3972e1e8871aff713fb4 WHIRLPOOL fb9c248612f30d4b35e58b328e931ee67cf08a91c110df08276aafe6a17406da60d3dd93f9f4404c5e802a10484918aa31696d3381b801defabfc79fe03ed4c4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVvQMlAAoJEJGRpfGTSRu4WakH/3fI5Wy9eEOr6ejx/K3Y3vEH
-/0pG2sNJdU7/IDODsXVs6xFNU1wkb0/hl7YJlJoznWfJ/Fx+sFnTz6ljG+9LO0Rn
-irMCCkJtrAMomaG+cvimtgKYf4NgM5atKHnG0TNt9qcK8Jq4uDhzEqCknxXr8vC+
-RjPWrWHe7O7CBf/u6rkspgxB3awdAptvkygSxlpjlglVt+RmKkVDhabPmS5Eguhj
-0LfqNcuZ59q8sOq/tI68vcC5ZApf+3NpjKtvIwHVcYhwJzeG/SmTeK88YpYAzyzq
-Dm7KukmH+d6TwU6jhuNnFs22j7MNj3D05xwWYm4uVFABFx712yfZLzQWPobx3jY=
-=fKBR
+iQEcBAEBCAAGBQJVw6ZzAAoJEJGRpfGTSRu4QO8IAInCgCVb6DjdXSyEaVWAV3o5
+ha4RfwvTb0YzEyn/e4aRKgNkg+m8rQq31C21FYyTz8P/0aDZe50qPqubf/BOtAcr
+MPVJ/fUtVxXb30Clhc2agn8SHX/8GRXuHSdoGvRUeyqI0G+P4CFNeQwlgILOLfoe
+F5NaD/owaYHgVuGDf4O1IxpMO+nmMOo5+PR7jnzyXXLBobFzlV1vYnnM9gWJhnM+
+Aga1DV6SQ9q44CgIey0JreX5T02oFk4/Aw5ERVI3z5/o8IXFU+Vkzh11sK0IEq3Y
+RBC/cCHc2N0q90vOgSnuCOqspwal+H8VxdRKHWM/QJjXOivsARYv9OEiVJAHWdc=
+=6/8N
 -----END PGP SIGNATURE-----
