@@ -4,11 +4,11 @@ DESCRIPTION=syslog replacement with advanced filtering features
 EAPI=5
 HOMEPAGE=http://www.balabit.com/network-security/syslog-ng
 IUSE=amqp caps dbi geoip ipv6 json mongodb pacct redis smtp spoof-source ssl systemd tcpd
-KEYWORDS=alpha amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd
+KEYWORDS=alpha amd64 ~arm ~arm64 ~hppa ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd
 LICENSE=GPL-2+ LGPL-2.1+
 RDEPEND=caps? ( sys-libs/libcap ) dbi? ( >=dev-db/libdbi-0.8.3 ) geoip? ( >=dev-libs/geoip-1.5.0 ) json? ( >=dev-libs/json-c-0.9 ) redis? ( dev-libs/hiredis ) smtp? ( net-libs/libesmtp ) spoof-source? ( net-libs/libnet:1.1 ) ssl? ( dev-libs/openssl:= ) systemd? ( sys-apps/systemd ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) dev-libs/libpcre >=dev-libs/eventlog-0.2.12 >=dev-libs/glib-2.10.1:2
 RESTRICT=test
 SLOT=0
 SRC_URI=http://www.balabit.com/downloads/files/syslog-ng/sources/3.6.4/source/syslog-ng_3.6.4.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d175654995b91640e0a7d4585b51a572
+_md5_=34c29530b81fbe93f20bbd9b677bc72e
