@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install preinst prepare setup unpack
+DEPEND=>=virtual/jdk-1.6 app-arch/unzip dev-java/bcprov:1.45 dev-java/junit:0 dev-java/sun-jaf:0 dev-java/oracle-javamail:0 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
+DESCRIPTION=Java cryptography APIs
+EAPI=5
+HOMEPAGE=http://www.bouncycastle.org/java.html
+IUSE=elibc_FreeBSD doc source elibc_FreeBSD
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
+LICENSE=BSD
+RDEPEND=>=virtual/jre-1.6 dev-java/bcprov:1.45 dev-java/junit:0 dev-java/sun-jaf:0 dev-java/oracle-javamail:0 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
+SLOT=1.45
+SRC_URI=http://www.bouncycastle.org/download/bcmail-jdk15-145.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-2	1889f7787714c5f7e3b5bb1c2be07c1f	java-pkg-simple	28dc6c3e6fa8ed51b88360dfd5fee53e	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=8ef22e62af040cca06cb13e9307ea504
